@@ -2,3 +2,5 @@
 
 # need to be removed as it normally created by gtk/nwg-look
 gtk/.gtkrc-2.0 
+
+gtk/.icons/default/index.theme
