@@ -2,7 +2,7 @@
 gtk-theme-name=Colloid-Purple-Dark-Dracula
 gtk-icon-theme-name=breeze-dark
 gtk-font-name=Adwaita Sans 11
-gtk-cursor-theme-name=Qogir-Dark
+gtk-cursor-theme-name=Qogir, 25
 gtk-cursor-theme-size=25
 gtk-toolbar-style=GTK_TOOLBAR_ICONS
 gtk-toolbar-icon-size=GTK_ICON_SIZE_LARGE_TOOLBAR
