@@ -1,0 +1,4 @@
+[Icon Theme]
+Name=Default
+Comment=Default Cursor Theme
+Inherits=Qogir, 25
