@@ -1,34 +1,83 @@
-#!/usr/bin/sh
+#!/bin/sh
 
 echo "WARNING: this script is a work in progress and have not being tested"
 
-read -o -p "Do you want to continue? (Y/N)" continue
+printf "Do you want to continue? (Y/N)"
+read -r continue
 
-if ($continue != Y); then
+if [ $continue -ne Y ]; then
   exit("User have decided to not continue")
 fi
 
 echo "Xgui4 OS Dotfiles Installer - Prototype 2 Version"
+
+echo "Preparing the gtk and icons theme" 
+
+touch gtk/.gtkrc
+
+cat gtk/.gtkrc-pre-defned > gtk/.gtkrc
+
+touch gtk/.icons/default/icon.theme
+
+cat gtk/icons/default/index.default.theme > gtk/.icon/default/icon.theme
+
+gsettings set org.gnome.desktop.interface color-scheme 'prefer-dark'
 
 echo "List of Operating System available?"
 
 echo "1. Arch based OS"
 echo "2. FreeBSD"
 
-read -o -p 'What is your Operating System??' operating_system
+printf "What is your Operating System?"
+read -r operating_system
 
-if $operating_system == "1"; then
+if [ $operating_system = "1" ]; then
+
   echo "First, do you want a XLibre or Xorg for an X server?"
+  printf "So Do you want to Install XLibre ? (Y/N) ?"
+  read -r confirm_xlibre
 
-  read -o -p 'So Do you want to Install XLibre ? (Y/N) ?' confirm_xlibre
-  if [[ $confirm_xlibre == "Y" || $confirm_xlibre == "y" ]]; then
+  if [ $confirm_xlibre = "Y"] || [$confirm_xlibre = "y" ]; then
     curl -O https://x11libre.net/repo/arch_based/x86_64/install-xlibre.sh 
     sudo chmod +x install-xlibre.sh
-    sudo ./install-xlibre.sh || echo -e "${RED}[Error]${ENDCOLOR} XLibre installation script has failed."
+    sudo ./install-xlibre.sh || echo "[Error] XLibre installation script has failed."
   fi
 
-  else  
-    sudo pacman -S xorg-server;
+  else sudo pacman -S xorg-server;
+
+  qtile_choosen=0
+  hyprland_choosen=0
+  i3_choosen=0
+  spectrwm_choosen=0
+
+  printf "Do you want to install i3 ?"
+  read -r user_input
+
+  if [ user_input = "yes" ] || [ user_input = "Yes" ]; then
+    $i3_choosen = 1
+  fi 
+
+  if [ $operating_system = "1"]; then 
+    printf "Do you want to install Qtile ?"
+    read -r user_input
+
+    if [ user_input = "yes" ] || [ user_input = "Yes" ]; then
+      $qtile_choosen = 1
+    fi 
+
+    printf "Do you want to install Hyprland ?"
+    read -r user_input
+
+    if [ user_input = "yes" ] || [ user_input = "Yes" ]; then
+      $hyprland_choosen = 1
+    fi 
+
+    printf "Do you want to install spectrwm ?"
+    read -r user_input
+
+    if [ user_input = "yes" ] || [ user_input = "Yes" ]; then
+      $spectrwm_choosen = 1
+    fi 
   fi
 
   # Define the JSON file
@@ -37,34 +86,55 @@ if $operating_system == "1"; then
   HYPRARCH="arch/hyprarch-setup.json"
   QTILE="arch/qtile-setup.json"
 
-  packages=($(jq -r '.pacman[]' "$ARCH"))
-  sudo pacman -S --noconfirm ${packages[@]}
+  packages=$(jq -r '.pacman[]' "$ARCH")
+  sudo pacman -S --noconfirm $packages
 
-  aur=($(jq -r '.aur[]' "$ARCH"))
-  yay -S --needed --noconfirm ${aur[@]}
+  aur=$(jq -r '.aur[]' "$ARCH")
+  yay -S --needed --noconfirm $aur
 
-  packages=($(jq -r '.pacman[]' "$I3"))
-  sudo pacman -S --needed --noconfirm ${packages[@]}
+  if [ $i3_choosen = 1 ]; then
+    packages=$(jq -r '.pacman[]' "$I3")
+    sudo pacman -S --needed --noconfirm $packages
+  fi
 
-  packages=($(jq -r '.pacman[]' "$HYPRARCH"))
-  sudo pacman -S --needed --noconfirm ${packages[@]}
+  if [ $hyprland = 1 ]; then
+    packages=$(jq -r '.pacman[]' "$HYPRARCH")
+    sudo pacman -S --needed --noconfirm $packages
+    aur=$(jq -r '.aur[]' "$HYPRARCH")
+    yay -S --needed --noconfirm $aur
+  fi
 
-  aur=($(jq -r '.aur[]' "$HYPRARCH"))
-  yay -S --needed --noconfirm ${aur[@]}
+  if [ $qtile_choosen = 1 ]; then
+    packages=$(jq -r '.pacman[]' "$QTILE")
+    sudo pacman -S --needed --noconfirm $packages
+    aur=$(jq -r '.aur[]' "$QTILE")
+    yay -S --needed --noconfirm $aur
+  fi
 
-  packages=($(jq -r '.pacman[]' "$QTILE"))
-  sudp pacman -S --needed --noconfirm ${packages[@]}
+  cd ~/.dotfiles
 
-  aur=($(jq -r '.aur[]' "$QTILE"))
-  yay -S --needed --noconfirm ${aur[@]}
+  if [ $qtile_choosen = 1 ]; then 
+    stow --adopt qtile
+  fi
 
+  if [ $hyprland_choosen = 1 ]; then 
+    stow --adopt hyprland waybar hyprshell 
+  fi
+
+  if [ $i3_choosen = 1 ]; then 
+    stow --adopt i3 polybar 
+  fi
+
+  if [ $spectrwm_choosen = 1 ]; then 
+    stow spectrwm
+  fi
+  stow --adopt bash fastfetch fish gtk kitty libinput-gestures kitty picom qt rofi starship wallpapers xsettings
 fi
 
 else 
-  echo "Do you want to install an X11 Server for an X11 Window Manager?"
-
-  read -o -p 'Do you want to install an X11 Server for an X11 Window Manager? (Y/N)' confirm_x11
-  if [[ $confirm_x11 == "Y" || $confirm_x11 == "y" ]]; then
+  printf "Do you want to install an X11 Server for an X11 Window Manager? (Y/N)")
+  read -r confirm_x11
+  if [ $confirm_x11 = "Y"] || [$confirm_x11 = "y" ]; then
     sudo pkg install -y xorg-server
   fi
 
@@ -72,11 +142,13 @@ else
   ESSENTIAL="freebsd/freebsd-essential-pkg.json"
   I3="freebsd/i3-setup.json"
 
-  packages=($(jq -r '.pacman[]' "$ESSENTIAL"))
-  sudo pkg install -y ${packages[@]}
+  packages=$(jq -r '.pkg[]' "$ESSENTIAL")
+  sudo pkg install -y $packages
 
-  packages=($(jq -r '.pacman[]' "$I3"))
-  sudo pkg install -y ${packages[@]}
+  packages=$(jq -r '.pkg[]' "$I3")
+  sudo pkg install -y $packages
+
+  cd ~/.dotfiles
+
+  stow --adopt fastfetch fish gtk i3 kitty libinput-gestures kitty picom polybar qt rofi starship wallpapers xsettings
 fi
-
-touch gtk/.gtkrc # create the file as it is needed 
